--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,140 @@
 <footer class="footer">
     <div class="footer__container">
-        Footer
+        <div class="footer__wrapper">
+            <div class="footer__column">
+                <div class="footer__label"></div>
+            </div>
+            <div class="footer__column">
+                <div class="footer__label">Детям</div>
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Робототехника</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Создание игр</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Программирование</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Мультимедиа</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Soft skills</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Шахматы</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Блогинг</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Создание игр</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Программирование</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Мультимедиа</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Soft skills</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__column">
+                <div class="footer__label">Подросткам</div>
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Web-разработка</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Прикладное программирование</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Графическое моделирование</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Game Development</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Soft skills</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Разработчик мобильных приложений</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Блогинг</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Создание игр</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Программирование</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Мультимедиа</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Soft skills</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__column">
+                <div class="footer__label">Взрослым</div>
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Разработчик игр на Unity</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Разработка ПО</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Графический Дизайн</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Тестировщик ПО</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Интернет Маркетинг</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Java-разработчик</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Python–разработчик</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">IOS-разработчик</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Программирование</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__column">
+                <div class="footer__label">Информация</div>
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Об академии</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Мероприятия</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Новости</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">База знаний</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Карьера</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="#">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </footer>
