--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -5,9 +5,9 @@
                 <a class="first-column__logo" href="#">
                     <img src="img/footer/svg/footer-logo.svg" alt="logo">
                 </a>
-                <a class="first-column__phone" href="tel:88009503398">8 800 950-33-98</a>
+                <a class="first-column__phone gradient-link" href="tel:88009503398">8 800 950-33-98</a>
                 <div class="first-column__address">г. Москва, ул. Ленина, д. 50</div>
-                <a class="first-column__email" href="mailto:info@hodfutureacademy.ru">info@hodfutureacademy.ru</a>
+                <a class="first-column__email gradient-link" href="mailto:info@hodfutureacademy.ru">info@hodfutureacademy.ru</a>
                 <div class="first-column__social">
                     <a href="#" class="first-column__social-item">
                         <img src="img/footer/svg/vk.svg" alt="vk">
@@ -31,37 +31,37 @@
                 <div class="footer__label">Детям</div>
                 <ul class="footer__list">
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Робототехника</a>
+                        <a class="footer__link gradient-link" href="#">Робототехника</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Создание игр</a>
+                        <a class="footer__link gradient-link" href="#">Создание игр</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Программирование</a>
+                        <a class="footer__link gradient-link" href="#">Программирование</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Мультимедиа</a>
+                        <a class="footer__link gradient-link" href="#">Мультимедиа</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Soft skills</a>
+                        <a class="footer__link gradient-link" href="#">Soft skills</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Шахматы</a>
+                        <a class="footer__link gradient-link" href="#">Шахматы</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Блогинг</a>
+                        <a class="footer__link gradient-link" href="#">Блогинг</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Создание игр</a>
+                        <a class="footer__link gradient-link" href="#">Создание игр</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Программирование</a>
+                        <a class="footer__link gradient-link" href="#">Программирование</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Мультимедиа</a>
+                        <a class="footer__link gradient-link" href="#">Мультимедиа</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Soft skills</a>
+                        <a class="footer__link gradient-link" href="#">Soft skills</a>
                     </li>
                 </ul>
             </div>
@@ -69,37 +69,37 @@
                 <div class="footer__label">Подросткам</div>
                 <ul class="footer__list">
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Web-разработка</a>
+                        <a class="footer__link gradient-link" href="#">Web-разработка</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Прикладное программирование</a>
+                        <a class="footer__link gradient-link" href="#">Прикладное программирование</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Графическое моделирование</a>
+                        <a class="footer__link gradient-link" href="#">Графическое моделирование</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Game Development</a>
+                        <a class="footer__link gradient-link" href="#">Game Development</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Soft skills</a>
+                        <a class="footer__link gradient-link" href="#">Soft skills</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Разработчик мобильных приложений</a>
+                        <a class="footer__link gradient-link" href="#">Разработчик мобильных приложений</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Блогинг</a>
+                        <a class="footer__link gradient-link" href="#">Блогинг</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Создание игр</a>
+                        <a class="footer__link gradient-link" href="#">Создание игр</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Программирование</a>
+                        <a class="footer__link gradient-link" href="#">Программирование</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Мультимедиа</a>
+                        <a class="footer__link gradient-link" href="#">Мультимедиа</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Soft skills</a>
+                        <a class="footer__link gradient-link" href="#">Soft skills</a>
                     </li>
                 </ul>
             </div>
@@ -107,31 +107,31 @@
                 <div class="footer__label">Взрослым</div>
                 <ul class="footer__list">
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Разработчик игр на Unity</a>
+                        <a class="footer__link gradient-link" href="#">Разработчик игр на Unity</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Разработка ПО</a>
+                        <a class="footer__link gradient-link" href="#">Разработка ПО</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Графический Дизайн</a>
+                        <a class="footer__link gradient-link" href="#">Графический Дизайн</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Тестировщик ПО</a>
+                        <a class="footer__link gradient-link" href="#">Тестировщик ПО</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Интернет Маркетинг</a>
+                        <a class="footer__link gradient-link" href="#">Интернет Маркетинг</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Java-разработчик</a>
+                        <a class="footer__link gradient-link" href="#">Java-разработчик</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Python–разработчик</a>
+                        <a class="footer__link gradient-link" href="#">Python–разработчик</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">IOS-разработчик</a>
+                        <a class="footer__link gradient-link" href="#">IOS-разработчик</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Программирование</a>
+                        <a class="footer__link gradient-link" href="#">Программирование</a>
                     </li>
                 </ul>
             </div>
@@ -139,22 +139,22 @@
                 <div class="footer__label">Информация</div>
                 <ul class="footer__list">
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Об академии</a>
+                        <a class="footer__link gradient-link" href="#">Об академии</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Мероприятия</a>
+                        <a class="footer__link gradient-link" href="#">Мероприятия</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Новости</a>
+                        <a class="footer__link gradient-link" href="#">Новости</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">База знаний</a>
+                        <a class="footer__link gradient-link" href="#">База знаний</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Карьера</a>
+                        <a class="footer__link gradient-link" href="#">Карьера</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">Контакты</a>
+                        <a class="footer__link gradient-link" href="#">Контакты</a>
                     </li>
                 </ul>
             </div>
