--- a/src/html/header.html
+++ b/src/html/header.html
@@ -10,16 +10,16 @@
                     <nav class="menu__body">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a class="menu__link" href="#">Все курсы</a>
+                                <a class="menu__link gradient-link" href="#">Все курсы</a>
                             </li>
                             <li class="menu__item">
-                                <a class="menu__link" href="#">Мероприятия</a>
+                                <a class="menu__link gradient-link" href="#">Мероприятия</a>
                             </li>
                             <li class="menu__item">
-                                <a class="menu__link" href="#">Базы знаний</a>
+                                <a class="menu__link gradient-link" href="#">Базы знаний</a>
                             </li>
                             <li class="menu__item">
-                                <a class="menu__link" href="#">Карьера</a>
+                                <a class="menu__link gradient-link" href="#">Карьера</a>
                             </li>
                         </ul>
                     </nav>
@@ -28,14 +28,17 @@
                     <div class="contacts__body">
                         <ul class="contacts__list">
                             <li class="contacts__item">
-                                <a class="contacts__link contacts__link--location" href="#">Нижний Новгород</a>
+                                <a class="contacts__link contacts__link--location gradient-link" href="#">
+                                    Нижний Новгород
+                                </a>
                             </li>
                             <li class="contacts__item">
-                                <a class="contacts__link contacts__link--phone" href="tel:88009503398">8 800
-                                    950-33-98</a>
+                                <a class="contacts__link contacts__link--phone gradient-link" href="tel:88009503398">
+                                    8 800 950-33-98
+                                </a>
                             </li>
                             <li class="contacts__item">
-                                <a class="contacts__link" href="#">Войти</a>
+                                <a class="contacts__link gradient-link" href="#">Войти</a>
                             </li>
                         </ul>
                     </div>
