--- a/src/html/head.html
+++ b/src/html/head.html
@@ -4,5 +4,6 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="icon" href="img/chess.ico"/>
     <title>@@title</title>
 </head>
