--- a/src/index.html
+++ b/src/index.html
@@ -389,17 +389,17 @@
                                 <form action="#" id="form" class="form__body">
                                     <div class="form__item">
                                         <input id="formName" type="text" name="name" class="form__input _req"
-                                               placeholder=" " autocomplete="off" required="true">
+                                               placeholder=" " autocomplete="off" required>
                                         <label for="formName" class="form__label">Ваше имя <span>*</span></label>
                                     </div>
                                     <div class="form__item">
                                         <input id="formPhone" type="text" name="phone" class="form__input _req"
-                                               placeholder=" " autocomplete="off" required="true">
+                                               placeholder=" " autocomplete="off" required>
                                         <label for="formPhone" class="form__label">Ваш телефон <span>*</span></label>
                                     </div>
                                     <div class="form__item">
                                         <input id="formEmail" type="text" name="email" class="form__input _req _email"
-                                               placeholder=" " autocomplete="off" required="true">
+                                               placeholder=" " autocomplete="off" required>
                                         <label for="formEmail" class="form__label">Ваш email <span>*</span></label>
                                     </div>
                                     <div class="form__info">Нажимая на кнопку, я соглашаюсь на обработку персональных
