--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                         <div class="banner__bonus">1 занятие бесплатно</div>
                         <div class="banner__recom">Прежде чем начать обучение советуем записаться на пробное занятие
                         </div>
-                        <button class="button">Записаться на пробное занятие</button>
+                        <a class="banner__button button">Записаться на пробное занятие</a>
                     </div>
                     <div class="banner__image">
                         <img src="img/section-banner/banner.jpg" alt="chess">
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="features__action">
-                    <button class="button">Записаться на курс</button>
+                    <a class="features__button button">Записаться на курс</a>
                 </div>
             </div>
         </section>
@@ -211,7 +211,7 @@
                             <div class="content__cost cost">
                                 <span>от 4 350 ₽ в месяц</span>
                             </div>
-                            <button class="button">Записаться на курс</button>
+                            <a class="content__button button">Записаться на курс</a>
                         </div>
                         <div class="content__image image-content">
                             <div class="image-content__body">
@@ -422,7 +422,7 @@
     <div class="popup__body">
         <div class="popup__content">
             <a href="" class="popup__close"></a>
-            <div class="popup__title">Оставить заявку</div>
+            <div class="popup__title">Запись на курс</div>
             <div class="popup__text">Через некоторое время с вами свяжется менеджер</div>
             <div class="popup__form form">
                 <form action="#" id="form" class="form__body">
