--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                         <div class="banner__bonus">1 занятие бесплатно</div>
                         <div class="banner__recom">Прежде чем начать обучение советуем записаться на пробное занятие
                         </div>
-                        <a class="banner__button button">Записаться на пробное занятие</a>
+                        <a class="banner__button button" href="#popup">Записаться на пробное занятие</a>
                     </div>
                     <div class="banner__image">
                         <img src="img/section-banner/banner.jpg" alt="chess">
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="features__action">
-                    <a class="features__button button">Записаться на курс</a>
+                    <a class="features__button button" href="#popup">Записаться на курс</a>
                 </div>
             </div>
         </section>
@@ -211,7 +211,7 @@
                             <div class="content__cost cost">
                                 <span>от 4 350 ₽ в месяц</span>
                             </div>
-                            <a class="content__button button">Записаться на курс</a>
+                            <a class="content__button button" href="#popup">Записаться на курс</a>
                         </div>
                         <div class="content__image image-content">
                             <div class="image-content__body">
