--- a/src/index.html
+++ b/src/index.html
@@ -421,7 +421,7 @@
 <div id="popup" class="popup">
     <div class="popup__body">
         <div class="popup__content">
-            <a href="" class="popup__close"></a>
+            <a href="#header" class="popup__close"></a>
             <div class="popup__title">Запись на курс</div>
             <div class="popup__text">Через некоторое время с вами свяжется менеджер</div>
             <div class="popup__form form">
