--- a/src/index.html
+++ b/src/index.html
@@ -419,6 +419,7 @@
     @@include('html/footer.html',{})
 </div>
 <div id="popup" class="popup">
+    <a href="#header" class="popup__area"></a>
     <div class="popup__body">
         <div class="popup__content">
             <a href="#header" class="popup__close"></a>
