--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header id="header" class="header">
+<header id="header" class="header lock-padding">
     <div class="header__container">
         <div class="header__body">
             <a class="header__logo" href="#"></a>
