Делаю выпадающее меню 101122_15:14

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -11,6 +11,117 @@
                         <ul class="menu__list">
                             <li class="menu__item">
                                 <a class="menu__link gradient-link" href="#">Все курсы</a>
+                                <ul class="submenu__list">
+                                    <li class="submenu__item">
+                                        <a href="#" class="submenu__link">Детям</a>
+                                        <ul class="sub-submenu__list">
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Робототехника</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Создание игр</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Программирование</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Мультимедиа</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Soft skills</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Шахматы</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Блогинг</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Создание игр</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Программирование</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Мультимедиа</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Soft skills</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="submenu__item">
+                                        <a href="#" class="submenu__link">Подросткам</a>
+                                        <ul class="sub-submenu__list">
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Web-разработка</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Прикладное программирование</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Графическое моделирование</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Game Development</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Soft skills</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Разработчик мобильных
+                                                    приложений</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Блогинг</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Создание игр</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Программирование</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Мультимедиа</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Soft skills</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="submenu__item">
+                                        <a href="#" class="submenu__link">Взрослым</a>
+                                        <ul class="sub-submenu__list">
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Разработчик игр на Unity</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Разработка ПО</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Графический Дизайн</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Тестировщик ПО</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Интернет Маркетинг</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Java-разработчик</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Python–разработчик</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">IOS-разработчик</a>
+                                            </li>
+                                            <li class="sub-submenu__item">
+                                                <a href="#" class="sub-submenu__link">Программирование</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="menu__item">
                                 <a class="menu__link gradient-link" href="#">Мероприятия</a>
