--- a/src/html/header.html
+++ b/src/html/header.html
@@ -11,6 +11,7 @@
                         <ul class="menu__list">
                             <li class="menu__item">
                                 <a class="menu__link gradient-link" href="#">Все курсы</a>
+                                <span class="menu__arrow arrow"></span>
                                 <ul class="submenu__list">
                                     <li class="submenu__item">
                                         <a href="#" class="submenu__link">Детям</a>
