--- a/src/html/header.html
+++ b/src/html/header.html
@@ -144,7 +144,7 @@
                         <ul class="contacts__list">
                             <li class="contacts__item">
                                 <a class="contacts__link contacts__link--location gradient-link" href="#">
-                                    Нижний Новгород
+                                    Москва
                                 </a>
                             </li>
                             <li class="contacts__item">
