--- a/src/html/header.html
+++ b/src/html/header.html
@@ -143,9 +143,7 @@
                     <div class="contacts__body">
                         <ul class="contacts__list">
                             <li class="contacts__item">
-                                <a class="contacts__link contacts__link--location gradient-link" href="#">
-                                    Москва
-                                </a>
+                                <span>Москва</span>
                             </li>
                             <li class="contacts__item">
                                 <a class="contacts__link contacts__link--phone gradient-link" href="tel:88009503398">
